refactor/refactor_all_code

--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -175,8 +175,8 @@
 		"title": "Type leaves",
 		"btn_create_type_leave": "Create type leave",
 		"search": "Search",
-		"name": "Name",
-		"nameV": "Name Vietnamese",
+		"nameE": "Name",
+		"name": "Name Vietnamese",
 		"modified_at": "Modified At",
 		"modified_by": "Modified By",
 		"action": "Action",
