--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -174,8 +174,8 @@
 		"title": "Loại phép",
 		"btn_create_type_leave": "Thêm loại phép",
 		"search": "Tìm kiếm",
-		"name": "Tên tiếng anh",
-		"nameV": "Tên tiếng việt",
+		"nameE": "Tên tiếng anh",
+		"name": "Tên tiếng việt",
 		"modified_at": "Sửa lúc",
 		"modified_by": "Người sửa",
 		"action": "Hành động",
