--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -19,5 +19,7 @@
     "confirm_delete": "Do you want to delete?",
     "submit": "Submit",
 
-    "no_results": "No results"
+    "no_results": "No results",
+    
+    "required": "Required"
 }
