--- a/src/i18n/locales/vi/formIT.json
+++ b/src/i18n/locales/vi/formIT.json
@@ -26,6 +26,7 @@
         "category": "Danh mục IT",
         "other_category": "Vui lòng chọn danh mục khác",
         "ex_other_category": "Ví dụ: Lỗi phần mềm kế toán",
+        "position": "Vị trí/Chức Vụ",
         "priority": "Mức độ ưu tiên",
         "low": "Thấp",
         "medium": "Trung bình",
