--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -21,5 +21,9 @@
 
     "no_results": "No results",
     
-    "required": "Required"
+    "required": "Required",
+
+    "approval": "Approval",
+	"reject": "Reject",
+    "resolved": "Resolved"
 }
