--- a/src/i18n/locales/en/approval.json
+++ b/src/i18n/locales/en/approval.json
@@ -15,7 +15,7 @@
         "detail": "Detail"
     },
     "assigned": {
-
+        "title": "Assigned task"
     },
     "history_approval_processed": {
         "title": "History approval/processed",
