--- a/src/i18n/locales/en/formIT.json
+++ b/src/i18n/locales/en/formIT.json
@@ -3,8 +3,8 @@
         "title": "Statistical",
         "time": "Time",
         "total": "Total",
-        "inprocess": "In process",
-        "completed": "completed",
+        "inprocess": "In Process",
+        "completed": "Completed",
         "pending": "Pending",
         "total_request": "Total request",
         "total_by_type": "Total request by type",
