--- a/src/i18n/locales/en/formIT.json
+++ b/src/i18n/locales/en/formIT.json
@@ -51,7 +51,8 @@
         "status": "Status",
         "action": "Action",
         "edit": "Edit",
-        "title_all_form_it": "All form IT"
+        "title_all_form_it": "All form IT",
+        "title_view_form_it": "View detail"
     },
     "setting": {
 
