--- a/src/i18n/locales/en/purchase.json
+++ b/src/i18n/locales/en/purchase.json
@@ -18,25 +18,17 @@
         "priority": "Priority"
     },
     "create": {
-        "title": "Create new form IT",
+        "title": "Purchase Request",
         "btn_list": "List",
-        "text_info_user_request": "Info user requester",
-        "text_info_request": "Info request",
-        "date_request": "Date request",
-        "date_required_completed": "Date required completed",
-        "category": "Category",
-        "other_category": "Please select another category",
-        "ex_other_category": "Ex: Accounting Software Error",
-        "position": "Position",
-        "priority": "Priority",
-        "low": "Low",
-        "medium": "Medium",
-        "high": "High",
-        "note": "Note",
-        "title_approval": "Approval form IT",
-        "assigned": "Assigned to",
-        "target_completion_date": "Target Completion Date",
-        "actual_completion_date": "Actual Completion Date"
+        "request_date": "Request Date",
+        "text_title_category_buy": "Purchase Item List",
+        "name_category": "Item Name",
+        "description": "Description",
+        "qty": "Quantity",
+        "unit_measurement": "Unit",
+        "required_date": "Required date",
+        "cost_center": "Cost center",
+        "note": "Note"
     },
     "list": {
         "title": "List form IT",
