--- a/src/i18n/locales/vi/purchase.json
+++ b/src/i18n/locales/vi/purchase.json
@@ -18,25 +18,17 @@
         "priority": "Priority"
     },
     "create": {
-        "title": "Create new form IT",
+        "title": "Đơn xin mua",
         "btn_list": "List",
-        "text_info_user_request": "Info user requester",
-        "text_info_request": "Info request",
-        "date_request": "Date request",
-        "date_required_completed": "Date required completed",
-        "category": "Category",
-        "other_category": "Please select another category",
-        "ex_other_category": "Ex: Accounting Software Error",
-        "position": "Position",
-        "priority": "Priority",
-        "low": "Low",
-        "medium": "Medium",
-        "high": "High",
-        "note": "Note",
-        "title_approval": "Approval form IT",
-        "assigned": "Assigned to",
-        "target_completion_date": "Target Completion Date",
-        "actual_completion_date": "Actual Completion Date"
+        "request_date": "Ngày yêu cầu",
+        "text_title_category_buy": "Danh sách mục mua",
+        "name_category": "Tên danh mục",
+        "description": "Mô tả",
+        "qty": "Số lượng",
+        "unit_measurement": "Đơn vị tính",
+        "required_date": "Ngày nhu cầu",
+        "cost_center": "Trung tâm chi phí",
+        "note": "Ghi chú"
     },
     "list": {
         "title": "List form IT",
