--- a/src/i18n/locales/en/approval.json
+++ b/src/i18n/locales/en/approval.json
@@ -25,7 +25,8 @@
         "approval_at": "Approved at",
         "action": "Action",
         "result": "Result",
-        "department": "Department"
+        "department": "Department",
+        "status": "Status"
     },
     "history_component": {
         "title": "History approval",
