--- a/src/i18n/locales/en/purchase.json
+++ b/src/i18n/locales/en/purchase.json
@@ -36,7 +36,7 @@
         "btn_create": "Create",
         "code": "Code",
         "user_requestor": "Requestor",
-        "department": "Department",
+        "department": "Department Request",
         "user_register": "User register",
         "created_at": "Created At",
         "approved_by": "Approval by",
