--- a/src/i18n/locales/vi/approval.json
+++ b/src/i18n/locales/vi/approval.json
@@ -30,7 +30,7 @@
         "status": "Trạng thái"
     },
     "history_component": {
-        "title": "Lịch sử phê duyệt",
+        "title": "Lịch sử",
         "username_approval": "Người duyệt",
         "action": "Hành động",
         "comment": "Chú thích",
