--- a/src/i18n/locales/vi/createLeaveOther.json
+++ b/src/i18n/locales/vi/createLeaveOther.json
@@ -17,5 +17,6 @@
     "no_date": "Không có dữ liệu",
     "delete": "Xóa",
     "not_allow": "Bạn chưa có quyền đăng ký, liên hệ với HR",
-    "receive_email": "Nhận thông báo qua email"
+    "receive_email": "Nhận thông báo qua email",
+    "title_update": "Cập nhật đơn nghỉ phép"
 }
