--- a/src/i18n/locales/en/formIT.json
+++ b/src/i18n/locales/en/formIT.json
@@ -6,16 +6,19 @@
         "inprocess": "In Process",
         "completed": "Completed",
         "pending": "Pending",
-        "total_request": "Total request",
-        "total_by_type": "Total request by type",
-        "total_by_dept": "Total request by department",
+        "total_request": "Total quantity by month",
+        "total_by_type": "Total quantity by type",
+        "total_by_dept": "Total quantity by department",
         "recent_request": "Recent request",
-        "content": "Title",
-        "user_sent": "User sent",
-        "dept": "Department",
-        "time_sent": "Time sent",
+        "reason": "Reason",
+        "requestor": "Requestor",
+        "department": "Department",
+        "created_at": "Created at",
         "status": "Status",
-        "priority": "Priority"
+        "priority": "Priority",
+        "error": "Statistic data error, please try again",
+        "loading": "Loading",
+        "code": "Code"
     },
     "create": {
         "title": "Create new form IT",
