--- a/src/i18n/locales/vi/formIT.json
+++ b/src/i18n/locales/vi/formIT.json
@@ -2,20 +2,23 @@
     "statistical": {
         "title": "Thống kê",
         "time": "Thời gian",
-        "total": "Tổng yêu cầu",
+        "total": "Tổng số yêu cầu",
         "inprocess": "Đang xử lý",
-        "completed": "Đã hoàn thành",
-        "pending": "Đang chờ duyệt",
-        "total_request": "Tổng số lượng theo yêu cầu",
-        "total_by_type": "Tổng yêu cầu theo loại",
-        "total_by_dept": "Tổng yêu cầu theo phòng ban",
+        "completed": "Hoàn thành",
+        "pending": "Chờ duyệt",
+        "total_request": "Tổng số lượng theo tháng",
+        "total_by_type": "Tổng số lượng theo danh mục",
+        "total_by_dept": "Tổng số lượng theo phòng ban",
         "recent_request": "Yêu cầu gần đây",
-        "content": "Tiêu đề",
-        "user_sent": "Người gửi",
-        "dept": "Phòng ban",
-        "time_sent": "Thời gian gửi",
+        "code": "Mã đơn",
+        "reason": "Lý do",
+        "requestor": "Người yêu cầu",
+        "department": "Phòng ban",
+        "created_at": "Thời gian gửi",
         "status": "Trạng thái",
-        "priority": "Ưu tiên"
+        "priority": "Ưu tiên",
+        "error": "Lỗi dữ liệu thống kê, thử lại sau",
+        "loading": "Đang tải"
     },
     "create": {
         "title": "Tạo đơn IT",
