--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -75,7 +75,7 @@
 			"title": "Leave, timekeeping",
 			"create_leave": "Create leave request",
 			"create_leave_for_others" : "Create leave for others",
-			"list_leave": "List leave request",
+			"overtime": "Overtime",
 			"time_keeping": "Timekeeping",
 			"mng_time_keeping": "Manage timekeeping"
 		},
@@ -96,7 +96,8 @@
 			"title": "Approval",
 			"pending_approval": "Pending approval",
 			"assigned": "Assigned",
-			"history_approval": "Approved/Processed"
+			"history_approval": "History approval",
+			"resolved": "Resolved"
 		}
 	},
 
