--- a/src/i18n/locales/vi/hr.json
+++ b/src/i18n/locales/vi/hr.json
@@ -38,7 +38,15 @@
         }
     },
     "miss_attendance_data": {
+        "create": {
 
+        },
+        "list": {
+
+        },
+        "list_register": {
+            
+        }
     },
     "internal_memo_hr": {
         
