--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -262,8 +262,8 @@
 		"to" : "To",
 		"day_time_work": "Day work (minutes)",
 		"night_time_work": "Night work (minutes)",
-		"day_ot_work": "Overtime day (minutes)",
-		"night_ot_work": "Overtime night (minutes)",
+		"day_ot_work": "Overtime day (hour)",
+		"night_ot_work": "Overtime night (hour)",
 		"late": "Go to work leave (minutes)",
 		"early": "Go home early (minutes)",
 		"go_out": "Go out (minutes)",
