--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -261,8 +261,8 @@
 		"to" : "Đến",
 		"day_time_work": "Làm ngày (phút)",
 		"night_time_work": "Làm đêm (phút)",
-		"day_ot_work": "Tăng ca ngày (phút)",
-		"night_ot_work": "Tăng ca đêm (phút)",
+		"day_ot_work": "Tăng ca ngày (giờ)",
+		"night_ot_work": "Tăng ca đêm (giờ)",
 		"late": "Đi muộn (phút)",
 		"early": "Về sớm (phút)",
 		"go_out": "Ra ngoài (phút)",
