--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -75,7 +75,7 @@
 			"title": "Leave, timekeeping",
 			"create_leave": "Create leave request",
 			"create_leave_for_others" : "Create leave for others",
-			"overtime": "Overtime",
+			"over_time": "Overtime",
 			"missing_attendace_data": "Miss attendance data",
 			"internal_memo_hr": "Internal memo HR",
 			"time_keeping": "Timekeeping",
