--- a/src/i18n/locales/vi/hr.json
+++ b/src/i18n/locales/vi/hr.json
@@ -8,7 +8,7 @@
             "usercode": "Mã NV",
             "username": "Họ tên",
             "position": "Chức vụ",
-            "date_register": "Ngày đăng ký",
+            "date_register": "Ngày đăng ký tăng ca",
             "type_overtime": "Loại tăng ca",
             "from_hour": "Từ giờ",
             "to_hour": "Đến giờ",
